# RaspberryPi-ADC-DAC

./: CMakeLists.txt  README.md  mainTestAdda.c
AD-DA-WS-RPI/: AD-DA-BCM.c  AD-DA-BCM.h  AD-DA-MOCKSPI.c  AD-DA-MOCKSPI.h  AD-DA-RPI.h  AD-DA-SPI.h  AD-DA-TYPES.h  AD-DA-WS-RPI.c  AD-DA-WS-RPI.h  CMakeLists.txt
AD-DA-WS-RPI/cmake/: Findbcm2835.cmake
doc/: Doxyfile
